# practical-rust-web

./: .gitignore
web-app/: Cargo.toml
web-app/src/: main.rs
web-app/static/: index.html  index2.html
