[package]
name = "web-app"
version = "0.1.0"
authors = ["L0uisJ0shua <sun-louis@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"

# For Dynamic Templating
serde_json = "1.0.53"
handlebars = { version = "3.0.1", features = ["dir_source"] }